# sdl2platformer

./: .gitignore  Animation.cpp  Animation.h  CMakeLists.txt  Collision.h  Color.h  GOCamera.cpp  GOCamera.h  GOConsumable.cpp  GOConsumable.h  GOFrame.cpp  GOFrame.h  GOPlayer.cpp  GOPlayer.h  GOSolid.cpp  GOSolid.h  GOUIBar.cpp  GOUIBar.h  GOUIText.cpp  GOUIText.h  GOWorld.cpp  GOWorld.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h  GameObject.cpp  GameObject.h  GameSettings.cpp  GameSettings.h  Makefile  PhysicsState.cpp  PhysicsState.h  README.md  Rect.cpp  RenderObject.cpp  RenderObject.h  SDL2Platformer.cbp  Size.cpp  Texture.cpp  (+2 more)
SDL Test Project/: Color.h  GOFrame.cpp  GOFrame.h  GOPlayer.cpp  GOSolid.h  GOWorld.cpp  GOWorld.h  GameObject.cpp  GameObject.h  GameSettings.cpp  PhysicsState.cpp  RenderObject.cpp  SDL Test Project.vcxproj  Vector2D.h
SDL2Platformer/: Animation.cpp  Animation.h  Collision.cpp  Collision.h  Color.cpp  Color.h  GOCamera.cpp  GOCamera.h  GOConsumable.cpp  GOConsumable.h  GOFrame.cpp  GOFrame.h  GOPlayer.cpp  GOPlayer.h  GOSolid.cpp  GOSolid.h  GOUI.cpp  GOUI.h  GOUIBar.cpp  GOUIBar.h  GOUIElement.cpp  GOUIElement.h  GOUIText.cpp  GOUIText.h  GOWorld.cpp  GOWorld.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h  GameObject.cpp  GameObject.h  GameSettings.cpp  GameSettings.h  PhysicsState.cpp  PhysicsState.h  Rect.cpp  Rect.h  RenderObject.cpp  RenderObject.h  (+8 more)
sdl2platformer.xcodeproj/: project.pbxproj
sdl2platformer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sdl2platformer.xcodeproj/project.xcworkspace/xcuserdata/verapohomova.xcuserdatad/: UserInterfaceState.xcuserstate
sdl2platformer.xcodeproj/xcuserdata/verapohomova.xcuserdatad/xcschemes/: sdl2platformer.xcscheme  xcschememanagement.plist
